--- a/ProyectoGuardaBarranco/src/main/res/values/strings.xml
+++ b/ProyectoGuardaBarranco/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">ProyectoGuardaBarranco</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="lbDescription">Description</string>
 
 </resources>
